--- a/Employees.html
+++ b/Employees.html
@@ -1,4 +1,4 @@
-<table border="10">
+<table border="1">
     <thead>
         <th>ID</th>
         <th>Name</th>
@@ -8,12 +8,19 @@
         <tr>
             <td>101</td>
             <td>Sachin</td>
-            <td>45000</td>
+            <td colspan="2">45000</td>
         </tr>
         <tr>
             <td>102</td>
             <td>Virat</td>
-            <td>55000</td>
+            <td>45000</td>
+        </tr>
+        <tr>
+            <td>103</td>
+                <td>surya
+                </td>
+                <td rowspan="2">60000</td>
+            
         </tr>
     </tbody>
 </table>
